snapshots/syntax/statements/control_flow/end/end_standalone_at_module_level.snap
---
source: vb6parse/src/syntax/statements/control_flow/end.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EndStatement
      children:
        - kind: EndKeyword
          text: End
    - kind: Newline
      text: "\n"
